<resources>
    <string name="app_name">GymAssist</string>
    <string name="login_string">Welcome to GymAssist!\nPlease <u>log in</u></string>
    <string name="login_string_second">to make your dreams come true ⭐</string>
    <string name="login_welcome_string">Hello fighter! 💪</string>
    <string name="alt_logo">Logo image</string>
    <string name="splash_string">Loading GymAssist…</string>
    <string name="profile_email_default">Email</string>
    <string name="profile_name_default">Name</string>
    <string name="weight_history">Weight history</string>
    <string name="logout">Logout</string>
    <string name="profile_bottom_info_text">All personal data is provided by user\'s Google Account \n and cannot be changed within GymAssist</string>
    <string name="profile_image">profile image</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="weight_history_title">Weight history</string>
    <string name="dialog_add_weight_title">Add weight</string>
    <string name="dialog_add_weight_desc">Enter your actual weight.</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="dialog_button_add">Add</string>
    <string name="profile_weight">"Your current weight: "</string>
    <string name="previous_day">Previous</string>
    <string name="next_day">Next</string>
    <string name="add_exercise">Add exercise</string>
    <string name="workout_day_name_default">Day of month</string>
    <string name="workout_day_date_default">01.01.2020</string>
    <string name="dialog_add_exercise_title">Add exercise</string>
    <string name="dialog_add_exercise_name_hint">Name</string>
    <string name="dialog_add_exercise_sets_hint">Sets</string>
    <string name="dialog_add_exercise_reps_hint">Reps</string>
    <string name="dialog_add_exercise_weight_hint">Weight</string>
    <string name="exercise_item_sets">Sets:</string>
    <string name="exercise_item_reps">Reps:</string>
    <string name="exercise_item_weight">Weight:</string>
    <string name="dialog_delete_exercise_title">Delete exercise</string>
    <string name="dialog_delete_exercise_desc">Are you sure you want to delete this exercise?</string>
    <string name="dialog_button_confirm">Confirm</string>
    <string name="dialog_add_progress_title">Add progress</string>
    <string name="dialog_add_progress_desc">Enter new value of set, rep and weight.</string>
    <string name="add_progress">Add progress</string>
    <string name="delete_exercise">Delete exercise</string>
</resources>
