<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profile_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:padding="@dimen/margin_normal"
    tools:context=".view.fragments.ProfileFragment">

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_logo_top"
        android:contentDescription="@string/profile_image"
        android:src="@drawable/ic_account"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profile_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:fontFamily="@font/merriweather_regular"
        android:text="@string/login_welcome_string"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/font_size_big"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_image" />

    <TextView
        android:id="@+id/profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sourcesanspro_regular"
        android:text="@string/profile_name_default"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/font_size_big"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_welcome" />

    <LinearLayout
        android:id="@+id/profile_weight_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_normal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_name"
        app:layout_constraintBottom_toTopOf="@+id/profile_weight_button"
        android:gravity="center">

        <TextView
            android:id="@+id/profile_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sourcesanspro_regular"
            android:text="@string/profile_weight"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/font_size_medium"/>

        <TextView
            android:id="@+id/profile_weight_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sourcesanspro_semibold"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/font_size_medium"
            android:layout_marginStart="@dimen/margin_smaller"/>

    </LinearLayout>

    <Button
        android:id="@+id/profile_weight_button"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/weight_history"
        android:theme="@style/TextButton"
        app:layout_constraintBottom_toTopOf="@id/profile_logout_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_weight_container" />

    <Button
        android:id="@+id/profile_logout_button"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_normal"
        android:text="@string/logout"
        android:theme="@style/TextButton"
        app:layout_constraintBottom_toTopOf="@id/profile_bottom_info"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_weight_button"/>

    <TextView
        android:id="@+id/profile_bottom_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_normal"
        android:fontFamily="@font/merriweather_regular"
        android:text="@string/profile_bottom_info_text"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/font_size_small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>

