<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/margin_small">

    <TextView
        android:id="@+id/dialog_delete_exercise_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/merriweather_regular"
        android:text="@string/dialog_delete_exercise_title"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/font_size_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dialog_delete_exercise_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_delete_exercise_title"
        android:layout_marginTop="@dimen/margin_smaller"
        android:layout_marginBottom="@dimen/margin_smaller"
        android:fontFamily="@font/sourcesanspro_regular"
        android:text="@string/dialog_delete_exercise_desc"
        android:textAlignment="textStart"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/font_size_normal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_delete_exercise_desc"
        android:layout_marginTop="@dimen/margin_smaller"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dialog_delete_exercise_button_cancel"
            android:layout_width="@dimen/dialog_button_width"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_smaller"
            android:text="@string/dialog_button_cancel"
            android:textColor="@color/colorWhite"
            android:theme="@style/TextButton"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/dialog_delete_exercise_button_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_button_confirm"
            android:textColor="@color/colorWhite"
            android:theme="@style/TextButton"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</RelativeLayout>