<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/margin_small">

    <TextView
        android:id="@+id/dialog_add_weight_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/baloopaaji"
        android:text="@string/dialog_add_weight_title"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/font_size_medium" />

    <TextView
        android:id="@+id/dialog_add_weight_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/baloopaaji"
        android:text="@string/dialog_add_weight_desc"
        android:textAlignment="textStart"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/font_size_normal" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialog_add_weight_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@color/colorPrimary"
        app:errorEnabled="false"
        app:errorIconDrawable="@null"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialog_add_weight_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloopaaji"
            android:inputType="numberDecimal"
            android:maxLength="5"
            android:textAlignment="center"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/font_size_small" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dialog_add_weight_button_cancel"
            android:layout_width="@dimen/dialog_button_width"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_small"
            android:text="@string/dialog_button_cancel"
            android:textColor="@color/colorWhite"
            android:theme="@style/TextButton" />

        <Button
            android:id="@+id/dialog_add_weight_button_add"
            android:theme="@style/TextButton"
            android:layout_width="@dimen/dialog_button_width"
            android:layout_height="wrap_content"
            android:text="@string/dialog_button_add"
            android:textColor="@color/colorWhite"/>

    </LinearLayout>

</LinearLayout>