<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/margin_small">

    <TextView
        android:id="@+id/dialog_add_progress_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/merriweather_regular"
        android:text="@string/dialog_add_progress_title"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/font_size_medium" />

    <TextView
        android:id="@+id/dialog_add_progress_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sourcesanspro_regular"
        android:layout_marginTop="@dimen/margin_smaller"
        android:text="@string/dialog_add_progress_desc"
        android:textAlignment="textStart"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/font_size_normal"
        android:layout_below="@+id/dialog_add_progress_title"/>

    <LinearLayout
        android:id="@+id/dialog_add_progress_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_add_progress_desc"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dialog_add_progress_sets_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_small"
            android:layout_weight="1"
            android:hint="@string/dialog_add_exercise_sets_hint"
            app:boxStrokeColor="@color/colorPrimary"
            app:errorEnabled="false"
            app:errorIconDrawable="@null"
            app:hintEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dialog_add_progress_sets_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sourcesanspro_regular"
                android:inputType="number"
                android:maxLength="1"
                android:textAlignment="textStart"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/font_size_normal" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dialog_add_progress_reps_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_small"
            android:layout_weight="1"
            android:hint="@string/dialog_add_exercise_reps_hint"
            app:boxStrokeColor="@color/colorPrimary"
            app:errorEnabled="false"
            app:errorIconDrawable="@null"
            app:hintEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dialog_add_progress_reps_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sourcesanspro_regular"
                android:inputType="number"
                android:maxLength="2"
                android:textAlignment="textStart"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/font_size_normal" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dialog_add_progress_weight_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/dialog_add_exercise_weight_hint"
            app:boxStrokeColor="@color/colorPrimary"
            app:errorEnabled="false"
            app:errorIconDrawable="@null"
            app:hintEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dialog_add_progress_weight_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sourcesanspro_regular"
                android:inputType="numberDecimal"
                android:maxLength="5"
                android:textAlignment="textStart"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/font_size_normal" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal"
        android:layout_below="@+id/dialog_add_progress_container">

        <Button
            android:id="@+id/dialog_add_progress_button_cancel"
            android:layout_width="@dimen/dialog_button_width"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_smaller"
            android:text="@string/dialog_button_cancel"
            android:textColor="@color/colorWhite"
            android:theme="@style/TextButton"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/dialog_add_progress_button_add"
            android:theme="@style/TextButton"
            android:layout_width="@dimen/dialog_button_width"
            android:layout_height="wrap_content"
            android:text="@string/dialog_button_add"
            android:textColor="@color/colorWhite"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</RelativeLayout>