<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/exercise_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="@dimen/cardview_elevation"
    app:cardBackgroundColor="@color/colorGrayLight"
    app:cardCornerRadius="@dimen/cardview_radius"
    android:foreground="?android:attr/selectableItemBackground"
    android:clickable="true"
    app:cardUseCompatPadding="true"
    android:focusable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="@dimen/margin_normal"
        android:paddingTop="@dimen/margin_small"
        android:paddingEnd="@dimen/margin_normal"
        android:paddingBottom="@dimen/margin_normal">

        <TextView
            android:id="@+id/history_item_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_small"
            android:fontFamily="@font/sourcesanspro_regular"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/font_size_small" />

        <LinearLayout
            android:id="@+id/history_item_info_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <LinearLayout
                android:id="@+id/history_item_sets_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/history_item_sets_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sourcesanspro_regular"
                    android:text="@string/exercise_item_sets"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/font_size_normal" />

                <TextView
                    android:id="@+id/history_item_sets"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_small"
                    android:fontFamily="@font/sourcesanspro_regular"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/font_size_normal" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/history_item_reps_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/history_item_reps_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sourcesanspro_regular"
                    android:text="@string/exercise_item_reps"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/font_size_normal" />

                <TextView
                    android:id="@+id/history_item_reps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_small"
                    android:fontFamily="@font/sourcesanspro_regular"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/font_size_normal" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/history_item_weights_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/history_item_weight_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sourcesanspro_regular"
                    android:text="@string/exercise_item_weight"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/font_size_normal" />

                <TextView
                    android:id="@+id/history_item_weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_small"
                    android:fontFamily="@font/sourcesanspro_regular"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/font_size_normal" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>